--- a/src/components/visualmemory/visualmemory.css
+++ b/src/components/visualmemory/visualmemory.css
@@ -20,14 +20,43 @@
     backface-visibility: visible;
     
     z-index: 1;
+
     background-clip: padding-box !important;
  }
 
+
+
+
  .Animate{
-    background-color: rgb(200, 152, 152);
-    transform: rotateX(180deg);
-    
+   animation: example 1s linear 1s 1 alternate;
+
  }
 
 
+ @keyframes example {
  
+  50%  { background-color: white;
+   opacity: 1;
+   transform: rotateX(180deg);}
+  100% {
+   background-color: rgb(0, 0, 102);
+   opacity: 0.15;
+   transform: rotateX(0deg)
+  }
+}
+.reverseAnimate{
+  animation: reverseanimate 0.2s linear 0.1s 1 alternate;
+  background-color: white;
+ 
+    opacity: 1;
+}
+
+@keyframes reverseanimate{
+ 
+  100% {
+    background-color: white;
+    transform: rotateX(180deg);
+    opacity: 1;
+  }
+}
+
