--- a/src/components/Retiontime /reactiontime.css
+++ b/src/components/Retiontime /reactiontime.css
@@ -12,6 +12,10 @@
     text-align: center;
     cursor: pointer;
     user-select: none;
+    display: flex;
+    justify-content: center;
+    align-items: center
+    ;
 }
 .Mainbox{
     display: flex;
@@ -53,7 +57,8 @@
 }
 
 .textfirst{
-    font-size: 24px;
+    font-size: 6vh;
+
 }
 
 .Scorenaem{
