--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 
 
 .Maionpage{
-    background: rgb(43, 135, 209);
+    background: white;
 position: relative;
 cursor: pointer;
 color: white;
@@ -24,6 +24,8 @@ text-align: center;
 
 .secondwraper{
     display: flex;
+    background: rgb(43, 135, 209);
+
     flex-direction: column;
     -webkit-box-pack: center;
     justify-content: center;
@@ -31,6 +33,6 @@ text-align: center;
     max-width: 1010px;
     margin-bottom: 46px;
     position: relative;
-    padding: 10px;
+   
     align-items: center;
 }
