--- a/src/components/Cubecomponent/Cubecomponent.css
+++ b/src/components/Cubecomponent/Cubecomponent.css
@@ -1,9 +1,13 @@
 .Cubename{
     border:15px solid transparent;
     border-radius: 10px; 
-     margin: 30px 0px 0px;
-     max-width: 406px;
+    margin: 10px 0px 0px 0px;
+
    } 
+
+  .Cubemargin{
+
+  }
   .Cubesec{
     position: relative;
     transform: translateZ(0px);
