--- a/src/components/GuessFlage/GuessFlage.css
+++ b/src/components/GuessFlage/GuessFlage.css
@@ -1,7 +1,7 @@
 .Image {
     
-    height: 100%;
-    width: 100%;
+    height: 100% !important;
+    width: 100% !important;
 }
 
 .Flageimagecont{
@@ -18,10 +18,59 @@
         object-fit: contain;
 
     }
-
-    .Question{
+    .Questionbox{
         margin-top: 20px;
-        height: 50px;
-        width: 200px;
+           display: flex;
+           flex-direction: column;
+           justify-content: center;
+    }
+    .Question{
+        margin-bottom: 20px;
+        padding: 12px 80px 12px 80px;
+
+        /* height: 50px;
+        width: 200px; */
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
   
+
+    .btn{
+        padding: 10px 91px;
+        background: #1b7be1;
+        display: inline-block;
+        border: none;
+        border-radius: 24px;
+        transition: 0.1s linear 0s;
+        font-weight: bold;
+        cursor: pointer;
+        font-size: inherit;
+        font-family: inherit;
+        line-height: inherit;
+        color: rgb(8 7 7) !important;
+        text-decoration: none !important;
+    }
+    .Next{
+        padding: 12px 30px;
+    background: rgb(255, 209, 84);
+    display: inline-block;
+    border: none;
+    border-radius: 3px;
+    transition:  0.1s linear 0s;
+    font-weight: bold;
+    cursor: pointer;
+    font-size: inherit;
+    font-family: inherit;
+    line-height: inherit;
+    color: rgb(51, 51, 51) !important;
+    text-decoration: none !important;
+    }
+
+    .NextLEve{
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+
+    }
