--- a/src/components/WordsTriel/WordsTriel.css
+++ b/src/components/WordsTriel/WordsTriel.css
@@ -30,6 +30,14 @@
  }
  .Cubename{
     margin: 30px 0px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    align-items: center;
+ }
+ .Cubenames{
+    margin: 30px 0px 0px;
     max-width: 355px;
     display: flex;
     flex-direction: column;
@@ -37,7 +45,6 @@
     width: 100%;
     align-items: center;
  }
-
 
 
  .Game-keyboard-button {
