--- a/src/components/inexpage/idnex.css
+++ b/src/components/inexpage/idnex.css
@@ -9,7 +9,9 @@
     max-width: 1010px;
     height: calc(100vh - 150px);
     position: relative;
-    padding: 10px;}
+    padding: 10px;
+    background: rgb(43, 135, 209)
+}
 
     .Logo{
       
