--- a/src/components/visualmemory/visualmemory.css
+++ b/src/components/visualmemory/visualmemory.css
@@ -81,3 +81,21 @@
   flex-wrap: wrap;
   
 }
+
+.red-border{
+border: 2px solid red;
+}
+.yellow-border{
+  border: 2px solid yellow;
+}
+.black-border{
+  border: 2px solid black;
+}
+
+.Quezmianbox{
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+
+}
