--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,14 @@
 }
 
 
+
+    @media (min-width: 700px){
+        body {
+            background: #e6e8f4;
+        }
+    }
+   
+
 .Maionpage{
     background: white;
 position: relative;
@@ -30,7 +38,6 @@ text-align: center;
     -webkit-box-pack: center;
     justify-content: center;
     margin: 0px auto;
-    max-width: 1010px;
     margin-bottom: 46px;
     position: relative;
    
