--- a/src/components/Cubecomponent/Cubecomponent.css
+++ b/src/components/Cubecomponent/Cubecomponent.css
@@ -1,7 +1,7 @@
 .Cubename{
     border:15px solid transparent;
-    border-radius: 10px; 
     margin: 10px 0px 0px 0px;
+    background: rgb(43, 135, 209);
 
    } 
 
@@ -14,4 +14,5 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    
  }
