--- a/src/components/Retiontime /reactiontime.css
+++ b/src/components/Retiontime /reactiontime.css
@@ -87,3 +87,16 @@
 
 
 
+.Abouttest{
+    color: black;
+    display: flex;
+    justify-content:start;
+    flex-direction: column;
+    align-items:flex-start;
+    margin: 20px;
+    margin-bottom: 30px;
+}
+.Abouttest .p .h1{
+    text-align: start;
+
+}
