New module rank box

--- a/src/components/Gamebord/Gamebord.css
+++ b/src/components/Gamebord/Gamebord.css
@@ -1,5 +1,5 @@
 .Tablehead{
-    background:      rgb(0, 123, 255);
-
-
+    background:rgb(0, 123, 255);
+    background: #fff;
+    padding-top: 10px;
 }
