--- a/src/components/Rankbox/rankbox.css
+++ b/src/components/Rankbox/rankbox.css
@@ -1,11 +1,11 @@
 .rankbox {
     display: flex;
-    width: 30%;
+    width: 26%;
+    position: relative;
     height: 183px;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    position: absolute;
     border-radius: 19px;
     border: 1px solid rgb(0, 123, 255);
     box-shadow: 2px 13px 15px -13px rgba(0, 0, 0, .75);
@@ -15,8 +15,7 @@
 .Mainrankbox {
     display: flex;
     width: 80%;
-    justify-content: space-between;
-    position: relative;
+    justify-content: space-around;
 }
 
 .Rankname {
@@ -24,13 +23,13 @@
 }
 
 .box {
-    position: relative;
+    
     /* left: 89px; */
-    width: 83%;
+    width: 100%;
     height: 200px;
 
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .Rankimage {
