--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,6 +7,9 @@
     align-items: center;
     padding: 0px;
     margin: 0px;
+    margin-left: 3px;
+
+
 }
 .css-i4vpdl :hover{
     background: rgb(242, 242, 242) !important;
